libraries/dynamic-ui-react/src/style/components/_d-select.scss
// stylelint-disable selector-class-pattern

.d-select {
  --#{$prefix}select-gap: #{$spacer-2};

  // select
  --#{$prefix}select-menu-shadow: #{$box-shadow-sm};
  --#{$prefix}select-option-focus-bg: var(--#{$prefix}gray-100);
  --#{$prefix}select-option-selected-color: var(--#{$prefix}secondary);
  --#{$prefix}select-option-selected-bg: var(--#{$prefix}gray-100);
  --#{$prefix}select-option-is-checkbox-font-size: var(--#{$prefix}body-font-size);
  --#{$prefix}select-option-is-checkbox-font-weight: var(--#{$prefix}fw-normal);
  --#{$prefix}select-option-is-checkbox-color: var(--#{$prefix}gray-900);
  --#{$prefix}select-option-has-icon-icon-size: var(--#{$prefix}ref-spacer-4);
  --#{$prefix}select-multi-value-padding-x: var(--#{$prefix}select-gap);
  --#{$prefix}select-multi-value-padding-y: 0;
  --#{$prefix}select-multi-value-margin-right: var(--#{$prefix}select-gap);
  --#{$prefix}select-multi-value-background: var(--#{$prefix}gray-100);
  --#{$prefix}select-multi-value-border-radius: #{$spacer-1};
  --#{$prefix}select-multi-value-label-color: var(--#{$prefix}secondary);

  --#{$prefix}select-indicator-width: var(--#{$prefix}ref-spacer-4);
  --#{$prefix}select-indicator-height: var(--#{$prefix}ref-spacer-4);

  // focus
  &:focus-within {
    .input-group {
      border-color: var(--#{$prefix}input-focus-border-color);
      box-shadow: var(--#{$prefix}input-focus-box-shadow);
    }
  }

  .d-select-control {
    display: flex;
    flex-direction: column;
    gap: var(--#{$prefix}select-gap);
  }

  // input with elements
  .input-group {
    border: var(--#{$prefix}input-border-width) solid var(--#{$prefix}input-border-color);
    border-radius: var(--#{$prefix}input-border-radius);
  }

  // select control
  .d-select-component {
    border-radius: var(--#{$prefix}input-border-radius);
  }

  // validation states
  @each $state, $data in $form-validation-states {
    $border-color: map-get($data, "border-color");
    $tooltip-bg-color: map-get($data, "tooltip-bg-color");
    $box-shadow: map-get($data, "focus-box-shadow");

    .input-group:has(.d-select-component.is-#{$state}) {
      border-color: $border-color;
      box-shadow: $box-shadow;

      ~ .form-text {
        color: $border-color;
      }

      .input-group-validation-icon {
        --#{$prefix}icon-color: #{$tooltip-bg-color};
      }
    }
  }

  .d-select__control {
    width: 100%;
    padding: $input-padding-y $input-padding-x;
    font-family: $input-font-family;
    @include rfs($input-font-size, $input-font-size);
    font-weight: $input-font-weight;
    line-height: $input-line-height;
    color: $input-color;
    appearance: none; // Fix appearance for date inputs in Safari
    background-color: $input-bg;
    background-clip: padding-box;
    // border: $input-border-width solid $input-border-color;

    @include border-radius($input-border-radius, 0);

    @include transition($input-transition);

    // Customize the `:focus` state to imitate native WebKit styles.
    &:focus {
      color: $input-focus-color;
      background-color: $input-focus-bg;
      outline: 0;
    }
  }

  .d-select__placeholder {
    color: $input-placeholder-color;
    // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
    opacity: 1;
  }

  // select menu
  .d-select__menu-list {
    top: calc(var(--#{$prefix}input-border-width) * 2);
    margin: calc(var(--#{$prefix}input-border-width) * -1);
    background: $input-bg;
    border-radius: var(--#{$prefix}input-border-radius);
    box-shadow: var(--#{$prefix}select-menu-shadow);
  }

  .d-select__control--menu-is-open .d-select__dropdown-indicator {
    transform: rotateX(180deg);
  }

  // select option
  .d-select__option {
    display: block;
    padding: $input-padding-y $input-padding-x;
  }

  .d-select__option--is-focused {
    background: var(--#{$prefix}select-option-focus-bg);
  }

  .d-select__option--is-selected {
    color: var(--#{$prefix}select-option-selected-color);
    background: var(--#{$prefix}select-option-selected-bg);
  }

  // select option with checkbox
  .d-select__option--is-checkbox {
    padding: 0;

    > label {
      width: 100%;
      padding: $input-padding-x;
    }

    .form-check-input {
      margin-right: $input-padding-x;
    }
  }

  .d-select__option--is-checkbox label {
    font-size: var(--#{$prefix}select-option-is-checkbox-font-size);
    font-weight: var(--#{$prefix}select-option-is-checkbox-font-weight);
    color: var(--#{$prefix}select-option-is-checkbox-color);
  }

  // select multi control
  .d-select__multi-value {
    padding: var(--#{$prefix}select-multi-value-padding-y) var(--#{$prefix}select-multi-value-padding-x);
    margin-right: var(--#{$prefix}select-multi-value-margin-right);
    background: var(--#{$prefix}select-multi-value-background);
    border-radius: var(--#{$prefix}select-multi-value-border-radius);
  }

  .d-select__multi-value__label {
    color: var(--#{$prefix}select-multi-value-label-color);
  }

  .d-select__control--has-icon,
  .d-select__option--has-icon {
    display: flex;
    flex-direction: row;
    gap: $input-padding-x;
    align-items: center;
    white-space: nowrap;

    .d-icon {
      --bs-icon-size: var(--#{$prefix}select-option-has-icon-icon-size);
    }
  }

  .d-select__indicator {
    display: flex;
    align-items: center;
    justify-content: center;
    width: var(--#{$prefix}select-indicator-width);
    height: var(--#{$prefix}select-indicator-height);
  }

  .d-select__indicator-separator {
    width: var(--#{$prefix}select-gap);
  }

  &.disabled .d-select__control {
    background: var(--#{$prefix}input-disabled-bg);
  }

  &.disabled .input-group {
    border-color: var(--#{$prefix}input-disabled-border-color);
  }

  &.disabled .d-select__single-value {
    color: var(--#{$prefix}input-disabled-color);
  }

  &.disabled .d-icon {
    --#{$prefix}icon-color: var(--#{$prefix}input-disabled-color);
  }
}

